deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: explorecalifornia.com
  name: explorecalifornia.com
spec:
  replicas: 1
  selector:
    matchLabels:
      app: explorecalifornia.com
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: explorecalifornia.com
    spec:
      containers:
        - image: localhost:8080/explorecalifornia.com
          name: explorecalifornia-com-4r6vm
          resources: {}
          imagePullPolicy: Always
status: {}
