service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: explorecalifornia.com
  name: explorecalifornia-com
spec:
  ports:
  - name: 3000-80
    port: 3000
    protocol: TCP
    targetPort: 80
  selector:
    app: explorecalifornia.com
  type: ClusterIP
status:
  loadBalancer: {}
