ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: explorecalifornia-com
spec:
  rules:
    - host: explorecalifornia.com
      http:
        paths:
          - backend:
              service:
                name: explorecalifornia-com
                port:
                  number: 80
            path: /
            pathType: Prefix
